--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,20 @@ body {
     width: 1660px;
 }
 
-.popup {
+/* .popup {
     display: none;
+    width: 100%;
+    height: 100%;
+    font-size: 13px;
+    font-weight: 400;
+    color: #000000;
+    position: fixed;
+    z-index: 9999;
+    background: rgba(0, 0, 0, 0.5);
+} */
+
+.form-container {
+    /* display: none; */
     width: 100%;
     height: 100%;
     font-size: 13px;
@@ -40,7 +52,7 @@ body {
     display: none;
 }
 
-.popup-toggle:checked + .popup {
+.popup-toggle:checked + .form-container {
     display: flex;
 }
 
@@ -316,9 +328,11 @@ main {
     margin-right: 4px;
     background-color: #606260;
     display: flex;
+    padding-top: 10px;
 }
 
 .card-background:before {
+    
 	content: '';
 	display: block;
 	position: absolute;
@@ -851,10 +865,6 @@ main {
     margin-right: 0;
 }
 
-.social-media-link-text {
-    visibility: hidden;
-}
-
 .copiright {
     color: #999999;
     font-size: 12px;
@@ -863,3 +873,10 @@ main {
     margin-left: 727px;
     margin-right: 700px;
 } 
+
+.visually-hidden{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    clip: rect(1px, 1px, 1px, 1px);
+}
